# ia-core-models

./: Dockerfile  README.md  add-cpes.yaml  pyproject.toml  setup.py
.github/workflows/: codeql.yml  conda-package.yml  defender-for-devops.yml  lint.yml  make.yml  publish.yml
docs/: SECURITY.md
training/: train_cnn.py
